bug-fix: direct impacts of processes
were not calculated correctly when libraries
were used.